# Lawgpt

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  start_server.py  test_api.py
data/: The Code of Civil Procedure, 1908.json  The Evidence Act, 1872.json  The Succession Act, 1925.json  bangladesh_criminal_procedure_code.json  bangladesh_law_bangla.json  bangladesh_law_english.json  bangladesh_penal_code_1860.json  digital_security_act_2018.json  digital_security_act_2018_english.json  madokdrobbo_niyontron_ain_2018.json  nari_shishu_nirjaton_domon_ain_2000.json  nari_shishu_nirjaton_domon_ain_2025.json  vokta_odhikar_songrokkhon_ain_2009.json  vokta_odhikar_songrokkhon_ain_2009_english.json  আইন-শৃঙ্খলা বিঘ্নকারী অপরাধ (দ্রুত বিচার) আইন, ২০০২.json  দুর্নীতি দমন কমিশন আইন, ২০০৪.json  পরিবেশ আদালত আইন, ২০১০.json  বাংলাদেশ শ্রম আইন, ২০০৬.json  মানিলন্ডারিং প্রতিরোধ আইন, ২০১২.json
lawgpt/: main.py
lawgpt/api/endpoint/: chat.py
lawgpt/api/schema/: chat.py
lawgpt/core/: config.py
lawgpt/data_pipeline/: rag_case_pipeline.py  rag_law_pipeline.py  reset_collection.py  reset_law_collection.py
lawgpt/llm/case_summarizer/: case_summarizer.py
lawgpt/llm/case_summarizer/schema/: case_summarizer.py
lawgpt/llm/prompts/: case_summary_prompt.yml  chat_prompt.yml
lawgpt/llm/workflow/: agent.py  custom_llm.py  graph.py  state.py
lawgpt/service/: example_ case_usage.py  example_law_usage.py  example_usage.py  upload.py  upload_law.py
